--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,16 +11,16 @@
             "program": "${file}",
             "console": "integratedTerminal"
         },
-        // {
-        //     "type": "lldb",
-        //     "request": "launch",
-        //     "name": "Debug",
-        //     //"program": "${workspaceFolder}/test.out",
-        //     //上一行是官方写法，但是不同的cpp调试都要改配置，非常麻烦
-        //     "program": "${fileDirname}/${fileBasenameNoExtension}",
-        //     "args": [],
-        //     "cwd": "${fileDirname}",
-        //     "preLaunchTask": "Build with Clang"
-        // }
+        {
+            "type": "lldb",
+            "request": "launch",
+            "name": "Debug",
+            //"program": "${workspaceFolder}/test.out",
+            //上一行是官方写法，但是不同的cpp调试都要改配置，非常麻烦
+            "program": "${fileDirname}/${fileBasenameNoExtension}",
+            "args": [],
+            "cwd": "${fileDirname}",
+            "preLaunchTask": "Build with Clang"
+        }
     ]
 }
